--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
 <body>
   <div class="container">
-    <nav >
-     <a href="services.html">Services</a>
-     <a href="#">Product</a>
-     <a href="#">Vision</a>
-     <a href="#">Features</a>
-     <a href="#">About</a>
-     <a href="#">Contact</a> 
-     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </nav>
+    <div class="navigator">
+      <nav >
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a> 
+      </nav>
+      <a href="#"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </div>
     <header class="innovation">
       <div >
          <h1>Innovation<br>
@@ -29,7 +31,7 @@
          </h1> 
          <button> Get Started</button>
        </div>
-       <img src="img/header-img.png" alt="Image of a code snippet.">
+       <img class="header-img" src="img/header-img.png" alt="Image of a code snippet.">
     </header>
     
     <section class="top_section">
